--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 :root{
-    --backgroungcolor: rgb(204, 204, 252)
+    --newMsgBackGroundColor: rgb(204, 204, 252);
+    --voteBtnColor: rgb(200, 200, 216);
 }
 #section {
     font-family: 'Plus Jakarta Sans', cursive;
@@ -68,12 +69,12 @@
     font-weight: bold;
 }
 .unread{
-    background-color: var(--backgroungcolor);
+    background-color: var(--newMsgBackGroundColor);
 }
 
 .msgText:hover{
     cursor: pointer;
-    background-color: var(--backgroungcolor);
+    background-color: var(--newMsgBackGroundColor);
 }
 #textArea{
     display: flex;
@@ -92,4 +93,25 @@
 }
 .msgContent{
     width:89%;
+}
+
+.voteBtn{
+    display: flex;
+    background-color: var(--voteBtnColor);
+    border-radius: 2px;
+    border: 1px solid gray;
+    height:32.5%;
+    color:white;
+    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5px;
+}
+.voteBtn:first-child{
+    border-radius: 5px 5px 0px 0px;
+    cursor: pointer;
+}
+.voteBtn:last-child{
+    border-radius: 0px 0px 5px 5px;
+    cursor: pointer;
 }
