--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@
     display: flex;
     flex-direction: column;
     width: 10%;
+    max-height: 70px;
 }
 .msgContent{
     width:89%;
@@ -131,4 +132,7 @@
     border: none;
     padding: 3px;
     cursor: pointer;
+}
+.responseVisible{
+    display:none;
 }
